fix alignment of nav bar

--- a/app/assets/stylesheets/components/_nav_bar.scss
+++ b/app/assets/stylesheets/components/_nav_bar.scss
@@ -1,7 +1,7 @@
 header.nav-bar {
   position: fixed;
   right: 14px;
-  width: 100vw - 1vw;
+  width: 100vw;
   height: 46px;
   font-size: 18px;
   font-family: $sans-serif;
